Add Apple Silicon macOS packaging